--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -1,26 +1,28 @@
 .tile-video {
   position: relative;
   width: 480px;
-  height: 270px;
+  aspect-ratio: 16 / 9;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 @media only screen and (max-width: 600px) {
   .tile-video {
     width: 240px;
-    height: 135px;
   }
 }
 
 .self-view {
   width: 480px;
-  height: 270px;
+  aspect-ratio: 16 / 9;
   position: relative;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 @media only screen and (max-width: 600px) {
   .self-view {
     width: 240px;
-    height: 135px;
   }
 }
 
@@ -30,19 +32,6 @@
 
 .no-video video {
   visibility: hidden;
-}
-
-/* Hard-code the self-view size if there's no one else in the call, just to make it align with the info-box */
-.self-view.alone {
-  width: 480px;
-  height: 270px;
-}
-
-@media only screen and (max-width: 600px) {
-  .self-view.alone {
-    width: 240px;
-    height: 135px;
-  }
 }
 
 /* Put screen share front and center in our grid when there is one active */
